# MBZIRC2020_OutdoorNav

./: CMakeLists.txt  README.md  package.xml
include/: AttitudeMsg.hpp  CollisionFilter.hpp  CollisionFinder.hpp  DataMessage.hpp  EmptyMsg.hpp  FireLineDescription.hpp  FloatMsg.hpp  Global2Inertial.hpp  IntegerMsg.hpp  Line2D.hpp  Matrix3by3.hpp  MissionStateManager.hpp  MsgEmitter.hpp  MsgOutdoorNavState.hpp  MsgReceiver.hpp  NozzleTipLocFinder.hpp  OptitrackMessage.hpp  PointsMsg.hpp  PoseMsg.hpp  PosesMsg.hpp  PositionMsg.hpp  Quaternion.hpp  ROSMsg.hpp  ROSUnit.hpp  ROSUnit_FireLocationServer.txt  ROSUnit_G2InertialTransform.hpp  ROSUnit_Optitrack.hpp  ROSUnit_RTK1.hpp  ROSUnit_RTK2.hpp  ROSUnit_Xsens.hpp  RTKMessagePosition.hpp  RTKMessageVelocity.hpp  Rectangle.hpp  RotationMatrix3by3.hpp  UpdatePoseMessage.hpp  Vector2D.hpp  Vector3D.hpp  Vector3DMessage.hpp  VectorMsg.hpp  Waypoint.hpp  (+4 more)
msg/: Pose.msg  Poses.msg
src/: AttitudeMsg.cpp  CollisionFilter.cpp  CollisionFinder.cpp  DataMessage.cpp  EmptyMsg.cpp  Fire.cpp  FireLineDescription.cpp  FloatMsg.cpp  Global2Inertial.cpp  HeadingMsg.cpp  IntegerMsg.cpp  Line2D.cpp  Matrix3by3.cpp  MissionStateManager.cpp  MsgEmitter.cpp  MsgOutdoorNavState.cpp  MsgReceiver.cpp  NozzleTipLocFinder.cpp  OptitrackMessage.cpp  PointsMsg.cpp  PosesMsg.cpp  PositionMsg.cpp  Quaternion.cpp  ROSUnit.cpp  ROSUnit_FireLocationServer.txt  ROSUnit_G2InertialTransform.cpp  ROSUnit_Optitrack.cpp  ROSUnit_RTK1.cpp  ROSUnit_RTK2.cpp  ROSUnit_Xsens.cpp  ROSUnit_uav_control_set_path.cpp  RTKMessagePosition.cpp  RTKMessageVelocity.cpp  (+8 more)
(+74 files in other folders)
